# CO3013

./: .env.example  .gitignore  DOCKER.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci-cd.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a3c5cbe62fe8_add_iot_session_id_to_bookings.py  c09b20211832_initial_schema.py
backend/app/: main.py
backend/app/core/: config.py  database.py  exceptions.py  iot.py  security.py
backend/app/dependencies/: __init__.py  auth.py
backend/app/models/: __init__.py  booking.py  enums.py  penalty.py  rating.py  space.py  user.py
backend/app/routes/: __init__.py  admin.py  auth.py  bookings.py  penalties.py  ratings.py  spaces.py  utilities.py
backend/app/schemas/: __init__.py  auth.py  booking.py  common.py  penalty.py  rating.py  space.py  user.py
backend/app/scripts/: seed.py
backend/scripts/: setup_test_db.py
backend/tests/: README.md  conftest.py  test_admin.py  test_auth.py  test_bookings.py  test_spaces.py
frontend/: .dockerignore  Dockerfile  build-commits.sh  eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/hooks/: use-mobile.tsx  useAuth.tsx  useRequireAdmin.ts  useRequireAuth.ts
frontend/src/lib/: admin.ts  api.ts  bookings.ts  penalties.ts  ratings.ts  spaces.ts  utilities.ts
frontend/src/schemas/: api.ts
nginx/: nginx.conf
scripts/: validate-docker.sh
(+50 files in other folders)
